--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fluentui/react": "^8.106.4",
+    "@material-ui/core": "file:material-ui/icons/Search",
     "@microsoft/sp-component-base": "1.18.2",
     "@microsoft/sp-core-library": "1.18.2",
     "@microsoft/sp-lodash-subset": "1.18.2",
@@ -25,6 +26,7 @@
     "@mui/material": "^5.15.18",
     "@pnp/nodejs-commonjs": "^2.15.0",
     "@pnp/sp-commonjs": "^2.15.0",
+    "@types/material-ui": "^0.21.17",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
