--- a/src/webparts/dashBoard/DashBoardWebPart.manifest.json
+++ b/src/webparts/dashBoard/DashBoardWebPart.manifest.json
@@ -17,7 +17,7 @@
     "officeFabricIconFontName": "Page",
     "properties": {
       "description": "DashBoard",
-      "listName" : "timer"
+      "listName" : "Clock in clock out"
     }
   }]
 }
